--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Hi Coursera!!!</title>
+        <title>My First Webpage!</title>
     </head>
 <body>
-    <h1 id="XDERI">Hi Coursera</h1>
+    <h1 id="XDERI">Hi Coursera!</h1>
 </body>
 </html>
