--- a/index.html
+++ b/index.html
@@ -2,38 +2,8 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>testing spaces</title>
-        <style>.list{
-            font-weight: bold;
-            opacity: 0.7;
-            color: blue;
-        }
-        .hmm{
-            font-size: medium;
-            font-style: oblique;
-            color: aqua;
-        }
-        section .force{
-            font-style: italic;
-            background-color: blueviolet;
-            text-decoration: dotted;
-            text-shadow: 0ex;
-            color: black;
-            opacity: 0.8;
-        }
-        section > .force{
-            background-color: brown;
-        }
-        .terma{
-            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-            font-size: x-large;
-            font-style: oblique;
-            font-stretch: extra-expanded;
-            color-interpolation-filters: linearRGB;
-            color: aquamarine;
-            background-color: antiquewhite;
-            opacity: 0.66;
-        }</style>
+        <title>TEST</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1 id="Top">My heading XD</h1>
